--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 
- # Ejecutar con un profile establecido por par√°metro: mvn spring-boot:run -Dspring-boot.run.profiles=h2mem
+ # Ejecutar con un profile establecido por par·metro: mvn spring-boot:run -Dspring-boot.run.profiles=h2mem
 
  # Build sin tests:  mvn -Dmaven.test.skip=true package
 
@@ -25,7 +25,7 @@ server.port=8080
 # Valores: none, validate, update, create, create-drop <= default
 spring.jpa.hibernate.ddl-auto=update
 
-#Habilita estad√≠sticas
+#Habilita estadÌsticas
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=DEBUG
 logging.level.org.hibernate.type=WARN 
@@ -36,6 +36,9 @@ logging.level.root=WARN
 logging.level.ar.edu.iua.rest=ERROR
 logging.level.ar.edu.iua.rest.ProductosRestController=DEBUG
 logging.level.ar.edu.iua.BackendApplication=TRACE
-logging.level.ar.edu.iua.IPruebaPerfil=INFO
+logging.level.ar.edu.iua.IPruebaPerfil=INFO	
+
+
+
 
 
